--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+  <!-- Loading Overlay (shown until dashboard is loaded) -->
+  <div id="loading-overlay" class="loading-overlay instant">
+    <div class="loading-state">
+      <div class="loading-spinner"></div>
+      <span>Loading...</span>
+    </div>
+  </div>
+
   <!-- Dashboard -->
   <div id="dashboard-view" class="hidden">
     <!-- Use semantic header element for better document structure -->
