--- a/public/admin/setup.html
+++ b/public/admin/setup.html
@@ -40,9 +40,7 @@
   <script type="module">
     (async function() {
       // Wait for i18n to be ready
-      while (!window.i18n?.loaded) {
-        await new Promise(r => setTimeout(r, 10));
-      }
+      await i18nReady();
 
       const setupForm = document.getElementById('setup-form');
       const passwordInput = document.getElementById('password');
